@@ -74,6 +74,9 @@
       </domain>
     </branch>
   </module>
+  <module id="banter">
+    <branch id="HEAD"/>
+  </module>
   <module id="beagle">
     <_description>Beagle Desktop Search</_description>
     <webpage>http://beagle-project.org/</webpage>
