@@ -1,3 +1,9 @@
+2007-05-15  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Add new module banter in Extras.
+	Add gstreamer modules in freedesktop.
+
 2007-05-14  Claude Paroz  <claude@2xlibre.net>
 
 	* templates/language-release-ui-stats-modules.tmpl: Remove unnecessary
